public enum CustomerTitle
{
    Mr, Miss, Mrs, Dr, Prof, Pastor
}