public class CustomerType
{
    public Guid Id { get; set; }
    public required string CustomerTypeName { get; set; }
    
}