public enum Gender
{
    MALE, FEMALE, OTHER
}