erDiagram

    %% ═══════════════════════════════════════════════════
    %% ERD 2 of 6: PROPERTY & OWNERSHIP
    %% DWA V&V System — Presentation View
    %% ═══════════════════════════════════════════════════
    %% AMENDED 2026-03-24: Property status/lineage, HDI indicator

    Property {
        Guid PropertyId PK
        string PropertyReferenceNumber
        Guid AddressId FK
        int PropertySize "hectares"
        DateOnly ProclamationDate
        DateOnly RegistrationDate
        string SGCode "Surveyor General code"
        string QuaternaryDrainage
        Guid WaterManagementAreaId FK
        decimal Longitude "decimal(9,6)"
        decimal Latitude "decimal(9,6)"
        string PropertyStatus "Active|Consolidated|Subdivided [AMENDED 2026-03-24]"
        Guid ParentPropertyId FK "[AMENDED 2026-03-24] self-ref for lineage"
        Guid CatchmentAreaId FK "[AMENDED 2026-04-01]"
    }

    Address {
        Guid AddressId PK
        string StreetAddress
        string SuburbName
        string CityName
        string Province
        decimal Longitude "decimal(9,6)"
        decimal Latitude "decimal(9,6)"
    }

    PropertyOwner {
        Guid OwnerId PK
        string FirstName
        string LastName
        DateOnly DateOfBirth
        Guid CustomerTypeId FK
        Guid CustomerTitleId FK
        string IdentityDocumentNumber "SA ID or Passport"
        string EmailAddress
        Guid AddressId FK
        Guid GenderId FK
        bool IsHDI "[AMENDED 2026-03-24] Historically Disadvantaged Individual"
    }

    PropertyOwnership {
        Guid Id PK
        Guid PropertyId FK
        Guid PropertyOwnerId FK
        string TitleDeedNumber
        DateOnly TitleDeedDate
    }

    CustomerType {
        Guid CustomerTypeId PK
        string CustomerTypeName
    }

    CustomerTitle {
        Guid CustomerTitleId PK
        string TitleName
    }

    Gender {
        Guid GenderId PK
        string GenderName
    }

    WaterManagementArea {
        Guid WmaId PK
        string WmaName
        string WmaCode
    }

    CatchmentArea {
        Guid CatchmentAreaId PK
        string CatchmentCode
        string CatchmentName
        Guid WmaId FK
    }

    %% ── Relationships ──

    Property ||--o{ PropertyOwnership : "has"
    PropertyOwner ||--o{ PropertyOwnership : "owns via title deed"
    Property }o--|| Address : "located at"
    Property }o--|| WaterManagementArea : "within"
    Property }o--|| CatchmentArea : "in catchment [AMENDED 2026-04-01]"
    CatchmentArea }o--|| WaterManagementArea : "belongs to [AMENDED 2026-04-01]"
    PropertyOwner }o--|| Address : "resides at"
    PropertyOwner }o--|| CustomerType : "is a"
    PropertyOwner }o--|| CustomerTitle : "has title"
    PropertyOwner }o--|| Gender : "is"
    Property }o--o| Property : "subdivided/consolidated from [AMENDED 2026-03-24]"
